[project]
name = "nfac-websockets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 110
fix = true
select = ["E", "F", "W", "C", "D", "I", "N", "Q"]
ignore = ["D203", "D213", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "E501"]
"migrations/*.py" = ["ALL"]
